--- a/packages/decap-cms-widget-markdown/package.json
+++ b/packages/decap-cms-widget-markdown/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "decap-cms-widget-markdown",
+  "name": "@taboola/decap-cms-widget-markdown",
   "description": "Widget for editing markdown in Decap CMS.",
   "version": "3.0.3",
   "homepage": "https://www.decapcms.org/docs/widgets/#markdown",
@@ -59,5 +59,8 @@
     "commonmark": "^0.30.0",
     "commonmark-spec": "^0.30.0",
     "slate-hyperscript": "^0.77.0"
+  },
+  "publishConfig": {
+    "registry": "https://artifactory.taboolasyndication.com/artifactory/api/npm/npm/"
   }
 }
