chore: dependencies update

--- a/packages/decap-cms-widget-markdown/package.json
+++ b/packages/decap-cms-widget-markdown/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@taboola/decap-cms-widget-markdown",
   "description": "Widget for editing markdown in Decap CMS.",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "homepage": "https://www.decapcms.org/docs/widgets/#markdown",
   "repository": "https://github.com/decaporg/decap-cms/tree/master/packages/decap-cms-widget-markdown",
   "bugs": "https://github.com/decaporg/decap-cms/issues",
@@ -37,6 +37,7 @@
     "slate": "^0.91.1",
     "slate-base64-serializer": "^0.2.107",
     "slate-history": "^0.93.0",
+    "slate-hyperscript": "^0.81.3",
     "slate-plain-serializer": "^0.7.1",
     "slate-react": "^0.91.2",
     "slate-soft-break": "^0.9.0",
@@ -57,8 +58,7 @@
   },
   "devDependencies": {
     "commonmark": "^0.30.0",
-    "commonmark-spec": "^0.30.0",
-    "slate-hyperscript": "^0.81.3"
+    "commonmark-spec": "^0.30.0"
   },
   "publishConfig": {
     "registry": "https://artifactory.taboolasyndication.com/artifactory/api/npm/npm/"
